Applying negative margin only to top and bottom to avoid gap on sides.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -64,7 +64,8 @@ section {
   z-index: -1;
   aspect-ratio: 960/150;
   width: 100%;
-  margin: -2px;
+  margin-top: -2px;
+  margin-bottom: -2px;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
